 + (Experience) You can now set guaranteed minimum values for XP gained if diminishing returns are enabled, this value defaults to 5% (experience.yml)
 + (Events) Starting an XP event will now use the title API (toggle this in advanced.yml)
 + (Sound) Volume and Pitch of sounds can now be configured in the new sounds.yml file
 + (MySQL) Added support for SSL for MySQL/MariaDB (On by default)
 + (Skills) Added a new subskill to some skills 'Understanding The Art' this adds nothing new, but tracks benefits that increase together that seemed unrelated, which was previously a bit obfuscated.
 + (Skills) Tool alerts now are sent to the Action Bar
 + (Skills) Super Ability activation alerts are now sent to the Action Bar
 + (Skills) Certain Skill messages are now sent to the Action Bar
 + (Config) Skill Rank requirements are now defined in skillranks.yml you cannot add or remove ranks from this file
 + (Config) Added option to use SSL for MySQL in config.yml
 + (Config) Added option to disable the new URL links to config.yml
 + (Config) New config file added coreskills.yml
 + (Config) Added rank settings for the new Woodcutting skill
 + (Config) Added configurable parameters for the new Tree Feller
 + (Config) Added retro toggle for Tree Feller
 + (Config) Added toggle to disable all scoreboards
 + (Chat) Added ability for admins to spy on party chat (off unless toggled on)
 + (Commands) Added new info command /mmoinfo or /mcinfo
 + (Commands) Added toggle command /mcchatspy
 + (API) Added many missing SubSkills to SubSkillType class
 + (Permissions) Added permission node mcmmo.commands.mcchatspy & mcmmo.commands.mcchatspy.others
 + (Permissions) Added permission nodes for Harvest Lumber, Splinter, Nature's Bounty, and Bark Surgeon
 + (Permissions) Added mcmmo.commands.mmoinfo for the new mmoinfo/mcinfo command
 + (Locale) Added locale strings for new Woodcutting abilities
 + (Locale) Added locale strings for mcchatspy command